<resources>
    <string name="app_name">股神策略</string>
    <string name="tab_home">首页</string>
    <string name="tab_transaction">交易</string>
    <string name="tab_mine">我的</string>
    <string name="notify_msg">请在系统设置中开启该应用的显示通知功能，否则您将错过很多信息提示，影响您的使用</string>

    <!-- 首页 -->
    <string name="search_hint">搜索股票代码/简拼</string>
    <string name="menu_income">收益榜</string>
    <string name="menu_simulated_trading">模拟交易</string>
    <string name="menu_news">新手教程</string>
    <string name="menu_invite_commission">邀请分佣</string>
    <string name="market_index">大盘指数</string>
    <string name="all_buy">大家都在买</string>
    <string name="dynamic_information">动态快讯</string>
    <string name="go_trading">去交易</string>
    <string name="please_input_stock_code_or_spell">请输入股票代码/简拼</string>
    <string name="latest_time_search">最近搜索</string>
    <string name="clear_search_record">清除搜索记录</string>
    <string name="please_searching_for_relevant_content">请搜索相关内容</string>
    <string name="not_searching_for_relevant_content">暂无搜索内容</string>
    <string name="load_failed_please_reload">加载失败</string>
    <string name="load_more">加载更多</string>
    <string name="no_data">暂无数据</string>
    <string name="go_trading_real_btn">发起T+1交易</string>
    <string name="go_trading_simulate_btn">发起模拟T+1交易</string>
    <string name="stock_detail">股票详情</string>
    <string name="five_day_yield_rate">5日收益率</string>
    <string name="total_yield_rate">总收益率</string>
    <string name="total_win_rate">总胜率</string>
    <string name="trading_amount">成交金额</string>
    <string name="t_plus_one">T+1</string>
    <string name="real_deposit">实付保证金</string>
    <string name="buying">买入</string>
    <string name="buying_t_plus_one">买入T+1</string>
    <string name="simulate_buying_t_plus_one">模拟买入T+1</string>

    <!-- 登录、注册 -->
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="phone_digits">1234567890</string>
    <string name="input_password_notify_message">请输入6-18位数字、字母</string>
    <string name="pwd_digits">1234567890abcdefghijklmnopqrstuvwxyz</string>
    <string name="forget_password_question_mark">忘记密码?</string>
    <string name="forget_trading_password">忘记交易密码?</string>
    <string name="login">登录</string>
    <string name="register_msg">还没账号?立即注册</string>
    <string name="login_msg">已有账号? 请登录</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="phone_number">手机号</string>
    <string name="v_code">验证码</string>
    <string name="get_v_code">获取验证码</string>
    <string name="sure">确定</string>
    <string name="sure_sale_with_question_mark">确定卖出?</string>
    <string name="confirm">确认</string>
    <string name="go_to_payment">去充值</string>
    <string name="pwd">密码\u3000\u3000</string>
    <string name="pwd_sure">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">请输入2-6位汉字</string>
    <string name="setting_nickname">修改昵称</string>
    <string name="store">保存</string>
    <string name="register">注册</string>
    <string name="five_days_profit">近5个交易日盈利榜</string>
    <string name="five_days_yield">近5个交易日收益率榜</string>
    <string name="my_profit">我的盈利</string>
    <string name="my_yield">我的收益率</string>

    <!-- 交易 -->
    <string name="my_trading">我的交易</string>
    <string name="bills">资金流水</string>
    <string name="assert_total">资产总额</string>
    <string name="frozen_deposit">冻结保证金</string>
    <string name="available_balance">可用余额</string>
    <string name="market_value">持仓市值</string>
    <string name="floating_pl">浮动盈亏</string>
    <string name="id_digits">1234567890xX</string>
    <string name="name">姓名\u3000\u3000\u3000</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="id">身份证号\u3000</string>
    <string name="please_input_id">请输入身份证号码</string>
    <string name="bank_card">银行卡\u3000\u3000</string>
    <string name="please_input_bank_card">请输入银行卡号</string>
    <string name="reserved_phone">预留手机号</string>
    <string name="input_reserved_phone">请输入银行预留手机号</string>
    <string name="bind_bank_card_note">绑定银行卡需让用户充值1元，完成后可随时提现</string>
    <string name="deposit">保证金</string>
    <string name="position_stock">持仓股数</string>
    <string name="value">市值</string>
    <string name="bought_time">买入时间</string>
    <string name="bought_price">买入价</string>
    <string name="current_price">现价</string>
    <string name="stop_loss_line">止损线</string>
    <string name="position_type">持仓类型</string>
    <string name="position_deffer">持仓递延</string>
    <string name="position_expire">持仓到期</string>
    <string name="deffer_close">递延关闭</string>
    <string name="recharge_success">充值成功</string>
    <string name="recharge_amount_note">充值金额(元)</string>
    <string name="withdraw_amount_note">提现金额(元)</string>
    <string name="withdraw_all">全部提现</string>
    <string name="input_recharge_amount_hint">请输入正确的充值金额</string>
    <string name="input_withdraw_amount_hint">请输入提现金额</string>
    <string name="withdraw">提现</string>
    <string name="recharge">充值</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="account_manage">账户管理</string>
    <string name="pay_account_manage">支付账户管理</string>
    <string name="next">下一步</string>
    <string name="sold_time">卖出时间</string>
    <string name="position_time">持仓时间</string>
    <string name="trading_stock_num">交易股数</string>
    <string name="sold_price">卖出价</string>
    <string name="sold_type">卖出类型</string>
    <string name="trading_profit_or_loss">交易盈亏</string>
    <string name="auto_deffer">自动递延</string>
    <string name="invest_deposit">投入保证金</string>
    <string name="add_deposit">追加保证金</string>
    <string name="service_charges">服务费</string>
    <string name="deferred_charges">递延费用</string>
    <string name="reduce_deposit_by_loss">亏损扣减保证金</string>
    <string name="return_deposit">返回保证金</string>
    <string name="trading_password">交易密码</string>
    <string name="v_code_trading_password">验证码\u3000</string>
    <string name="input_trading_password">请输入8-16个英文/数字</string>
    <string name="confirm_withdraw">确认提现</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="bind_card">绑定银行卡</string>
    <string name="unbind_bank_card">未绑定银行卡，点击去绑定</string>
    <string name="set_trading_password">设置交易密码</string>
    <string name="update_trading_password">修改交易密码</string>
    <string name="position_detail">持仓详情</string>
    <string name="settlement_detail">结算详情</string>
    <string name="send_sms_note">我们将发送验证码到您的手机：%s</string>
    <string name="confirm_payment">确认支付</string>
    <string name="total_payment_amount">合计支付金额</string>
    <string name="insufficient_balance_notify_message">账户余额不足，请联系管理员充值</string>
    <string name="choose_bank">选择银行</string>
    <string name="withdraw_digits">1234567890.</string>
    <string name="edit_stop_loss_price">修改止损价格</string>
    <string name="stop_loss_price">止损价格</string>
    <string name="now_price">现价</string>
    <string name="margin_call">追加保证金</string>
    <string name="zero_d">0.00</string>
    <string name="go_login">去登录</string>
    <string name="register_get">注册领取</string>
    <string name="change_stock">更换股票</string>
    <string name="two_trading_days">2个交易日</string>
    <string name="stock_name">股票名称</string>
    <string name="present_price">当前价</string>
    <string name="price_change_ratio">涨跌幅</string>
    <string name="get_welfare">领取福利</string>
    <string name="recommend_stocks">推荐体验股票</string>
    <string name="real_stock_buy_continue_close_message">递延关闭，下一个交易日 14：55将发起平仓</string>
    <string name="real_stock_buy_continue_open_message">自动递延，下一个交易日 14：00将自动发起递延</string>
    <string name="sale_stock_nmuber">卖出股数</string>
    <string name="sale_success">卖出成功</string>
    <string name="buy_success">购买成功</string>
    <string name="sale_stock_price">卖出价格</string>
    <string name="market_price_sale">市价卖出</string>
    <string name="price_zero_string_value">0.00</string>

    <!-- 我的 -->
    <string name="mine_record">我的战绩</string>
    <string name="invite_friend">邀请好友赚钱</string>
    <string name="normal_question">常见问题</string>
    <string name="online_customer_service">在线客服</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="update_app">版本更新</string>
    <string name="login_out">退出登录</string>
    <string name="warm_notice">温馨提示</string>
    <string name="open_we_chat">打开微信</string>
    <string name="added_already">加过了</string>
    <string name="close">关闭</string>
    <string name="trade_history">历史交易记录</string>
    <string name="message_list">消息列表</string>
    <string name="header">头像</string>
    <string name="login_phone">登录手机</string>
    <string name="login_password">登录密码</string>
    <string name="edit_info">编辑资料</string>
    <string name="verify_old_phone">点击“获取验证码”完成原手机号码短信验证</string>
    <string name="verify_new_phone">请输入新手机号码，点击“获取验证码”完成短信验证</string>
    <string name="click_to_login">点击登录</string>
    <string name="old_phone_number">原手机号</string>
    <string name="new_phone_number">新手机号</string>
    <string name="old_password">原密码\u3000</string>
    <string name="new_password">新密码\u3000</string>
    <string name="new_password_again">确认密码</string>

    <!-- 我的 设置-->
    <string name="please_input_your_opinion">请输入您的宝贵意见</string>
    <string name="contact_information">联系方式</string>
    <string name="leave_your_wx_or_phone_number">留下你的微信或手机号</string>
    <string name="commit">提交</string>
    <string name="edit_header">修改头像</string>
    <string name="take_photo">拍照</string>
    <string name="select_photo_from_phone_albums">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="contact_us">联系我们</string>
    <string name="service_wx">客服微信号</string>
    <string name="copy_right">Copyright © 2018 All rights reserved</string>

    <!-- 自选 -->
    <string name="mine_optional">我的自选</string>
    <string name="edit">编辑</string>
    <string name="mine_select_stock">我的自选股</string>
    <string name="amount_of_increase">涨幅</string>
    <string name="designation">名称</string>
    <string name="drag">拖动</string>
    <string name="all_item_select">全选</string>
    <string name="delete">删除</string>
    <string name="cancle_all_select">取消全选</string>
    <string name="finish">完成</string>

</resources>
