<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_ui">

    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_def"
        android:paddingRight="@dimen/padding_def"
        android:paddingLeft="@dimen/padding_def"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/trading_password"
            android:textColor="@color/text_black_333333"
            android:textSize="@dimen/text_size_15"/>

        <com.liyuu.strategy.ui.view.MyEditText
            android:id="@+id/et_trading_password"
            style="@style/View.EditText"
            android:layout_marginLeft="@dimen/content_spacing_10"
            android:background="@null"
            android:hint="@string/input_trading_password"
            android:inputType="textPassword"
            android:digits="@string/pwd_digits"
            android:textColor="@color/text_black_333333"
            android:textSize="@dimen/text_size_15"
            android:maxLength="16"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget_trading_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/padding_def"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:text="@string/forget_trading_password"
        android:textColor="@color/text_gold_bea85c"
        android:textSize="@dimen/text_size_13" />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_def"
        android:layout_marginRight="@dimen/padding_def"
        android:enabled="false"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/confirm_withdraw"
        android:background="@drawable/selector_btn_round"
        android:textColor="@color/text_gold_60460f"
        android:textSize="18sp"/>

</LinearLayout>
